--- a/mybatisplus-demo/src/main/resources/application.yml
+++ b/mybatisplus-demo/src/main/resources/application.yml
@@ -10,3 +10,6 @@ logging:
     cn.lcl.dao: trace
   pattern:
     console: '%p%m%n'
+mybatis-plus:
+  mapper-locations:
+  - classpath*:mapper/*.xml
