--- a/mybatisplus-demo/src/main/resources/application.yml
+++ b/mybatisplus-demo/src/main/resources/application.yml
@@ -13,3 +13,8 @@ logging:
 mybatis-plus:
   mapper-locations:
   - classpath*:mapper/*.xml
+  global-config:
+    db-config:
+      logic-delete-field: deleted
+      logic-delete-value: 1
+      logic-not-delete-value: 0
