--- a/sb-04-mybatisplus/src/main/resources/application.yml
+++ b/sb-04-mybatisplus/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     password: lcl123
     url: jdbc:mysql://localhost:3306/mybatis?serverTimezone=GMT%2B8&useSSl=false&characterEncoding=utf-8
     driver-class-name: com.mysql.cj.jdbc.Driver
+  profiles:
+    active: dev
 logging:
   level:
     root: warn
