--- a/sb-04-mybatisplus/pom.xml
+++ b/sb-04-mybatisplus/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!--druid-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.21</version>
+        </dependency>
 
         <!--lombok-->
         <dependency>
