--- a/sb-04-mybatisplus/src/main/resources/application.yml
+++ b/sb-04-mybatisplus/src/main/resources/application.yml
@@ -4,6 +4,26 @@ spring:
     password: lcl123
     url: jdbc:mysql://localhost:3306/mybatis?serverTimezone=GMT%2B8&useSSl=false&characterEncoding=utf-8
     driver-class-name: com.mysql.cj.jdbc.Driver
+    druid:
+      # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+      # DruidFilterConfiguration
+      filter:
+        slf4j:
+          enabled: true
+        wall:
+          enabled: true
+        stat:
+          enabled: true
+      # 配置DruidStatFilter
+      web-stat-filter:
+        enabled: true
+        url-pattern: "/*"
+        exclusions: "*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*"
+      stat-view-servlet:
+        enabled: true
+        url-pattern: "/druid/*"
+        login-username: admin
+        login-password: admin
   profiles:
     active: dev
 logging:
