--- a/sb-02-swagger2/pom.xml
+++ b/sb-02-swagger2/pom.xml
@@ -24,6 +24,11 @@
             <version>2.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.9.6</version>
+        </dependency>
     </dependencies>
 
 </project>
