--- a/sb-07-redis/src/main/resources/application.properties
+++ b/sb-07-redis/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # Redis数据库索引（默认为0）
 # Redis服务器地址
-spring.redis.host=127.0.0.1
+spring.redis.host=192.168.244.128
 # Redis服务器连接端口
-spring.redis.port=6379
+spring.redis.port=7001
+spring.redis.cluster.nodes=192.168.244.128:7001,192.168.244.128:7002,192.168.244.128:7003,192.168.244.128:7004,192.168.244.128:7005,192.168.244.128:7006
 # Redis服务器连接密码（默认为空）
 spring.redis.password=
 # 连接池最大连接数（使用负值表示没有限制）
