--- a/sb-04-mybatisplus/src/main/resources/application.yml
+++ b/sb-04-mybatisplus/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: root
-    password: lcl123
+    password: 123456
     url: jdbc:mysql://localhost:3306/mybatis?serverTimezone=GMT%2B8&useSSl=false&characterEncoding=utf-8
     driver-class-name: com.mysql.cj.jdbc.Driver
     druid:
