--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>sb-06-websocket</module>
         <module>sb-07-redis</module>
         <module>sb-08-security</module>
+        <module>sb-09-jwt</module>
     </modules>
 
     <properties>
