--- a/sb-08-security/pom.xml
+++ b/sb-08-security/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sb-08-security</artifactId>
+    <name>sb-08-security</name>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
