--- a/sb-04-mybatisplus/pom.xml
+++ b/sb-04-mybatisplus/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>springboot-study</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>mybatisplus-demo</artifactId>
+    <artifactId>sb-04-mybatisplu</artifactId>
     <name>sb-04-mybatisplus</name>
 
 
