--- a/sb-07-redis/src/main/resources/application.properties
+++ b/sb-07-redis/src/main/resources/application.properties
@@ -1,18 +1,19 @@
-# RedisÊı¾İ¿âË÷Òı£¨Ä¬ÈÏÎª0£©
-# Redis·şÎñÆ÷µØÖ·
-spring.redis.host=192.168.244.128
-# Redis·şÎñÆ÷Á¬½Ó¶Ë¿Ú
-spring.redis.port=7001
-spring.redis.cluster.nodes=192.168.244.128:7001,192.168.244.128:7002,192.168.244.128:7003,192.168.244.128:7004,192.168.244.128:7005,192.168.244.128:7006
-# Redis·şÎñÆ÷Á¬½ÓÃÜÂë£¨Ä¬ÈÏÎª¿Õ£©
+# Redisæ•°æ®åº“ç´¢å¼•ï¼ˆé»˜è®¤ä¸º0ï¼‰
+# RedisæœåŠ¡å™¨åœ°å€
+spring.redis.host=127.0.0.1
+# RedisæœåŠ¡å™¨è¿æ¥ç«¯å£
+spring.redis.port=6379
+#spring.redis.cluster.nodes=192.168.244.128:7001,192.168.244.128:7002,192.168.244.128:7003,192.168.244.128:7004,192.168.244.128:7005,192.168.244.128:7006
+#spring.redis.cluster.nodes=127.0.0.1:6379
+# RedisæœåŠ¡å™¨è¿æ¥å¯†ç ï¼ˆé»˜è®¤ä¸ºç©ºï¼‰
 spring.redis.password=
-# Á¬½Ó³Ø×î´óÁ¬½ÓÊı£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓĞÏŞÖÆ£©
-spring.redis.lettuce.pool.max-active=200
-# Á¬½Ó³Ø×î´ó×èÈûµÈ´ıÊ±¼ä£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓĞÏŞÖÆ£©
-spring.redis.lettuce.pool.max-wait=-1
-# Á¬½Ó³ØÖĞµÄ×î´ó¿ÕÏĞÁ¬½Ó
-spring.redis.lettuce.pool.max-idle=10
-# Á¬½Ó³ØÖĞµÄ×îĞ¡¿ÕÏĞÁ¬½Ó
-spring.redis.lettuce.pool.min-idle=0
-# Á¬½Ó³¬Ê±Ê±¼ä£¨ºÁÃë£©
+# è¿æ¥æ± æœ€å¤§è¿æ¥æ•°ï¼ˆä½¿ç”¨è´Ÿå€¼è¡¨ç¤ºæ²¡æœ‰é™åˆ¶ï¼‰
+#spring.redis.lettuce.pool.max-active=200
+# è¿æ¥æ± æœ€å¤§é˜»å¡ç­‰å¾…æ—¶é—´ï¼ˆä½¿ç”¨è´Ÿå€¼è¡¨ç¤ºæ²¡æœ‰é™åˆ¶ï¼‰
+#spring.redis.lettuce.pool.max-wait=-1
+# è¿æ¥æ± ä¸­çš„æœ€å¤§ç©ºé—²è¿æ¥
+#spring.redis.lettuce.pool.max-idle=10
+# è¿æ¥æ± ä¸­çš„æœ€å°ç©ºé—²è¿æ¥
+#spring.redis.lettuce.pool.min-idle=0
+# è¿æ¥è¶…æ—¶æ—¶é—´ï¼ˆæ¯«ç§’ï¼‰
 spring.redis.timeout=1000
